@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -35,7 +35,7 @@
  *          java.rmi/sun.rmi.transport
  *          java.rmi/sun.rmi.transport.tcp
  * @build TestLibrary Dummy RegistryVM RMIRegistryRunner
- * @run main/othervm/policy=security.policy
+ * @run main/othervm
  *     -Djava.rmi.server.useCodebaseOnly=false ClassPathCodebase
  */
 
@@ -85,7 +85,7 @@ public class ClassPathCodebase {
             File rmiregistryDir =
                   new File(System.getProperty("user.dir", "."), importCodebase);
             rmiregistry = RegistryVM.createRegistryVMWithRunner("RMIRegistryRunner",
-                            " -Denv.class.path=. -Djava.security.manager=allow"
+                            " -Denv.class.path=."
                             + " -Djava.rmi.server.codebase=" + exportCodebaseURL
                             + " -Duser.dir=" + rmiregistryDir.getAbsolutePath());
             rmiregistry.start();
