@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,33 +27,27 @@
  * @summary Make sure BasicPermission constructor raises
  * NullPointerException if permission name is null, and
  * IllegalArgumentException is permission name is empty.
- * @run main/othervm -Djava.security.manager=allow NullOrEmptyName
+ * @run main/othervm NullOrEmptyName
  */
+
+import java.util.PropertyPermission;
 
 public class NullOrEmptyName {
 
     public static void main(String[]args) throws Exception {
         NullOrEmptyName noe = new NullOrEmptyName();
 
-        // run without sm installed
-        noe.run();
-
-        // run with sm installed
-        SecurityManager sm = new SecurityManager();
-        System.setSecurityManager(sm);
         noe.run();
 
         try {
-            // called by System.getProperty()
-            sm.checkPropertyAccess(null);
+            new PropertyPermission(null, "read");
             throw new Exception("Expected NullPointerException not thrown");
         } catch (NullPointerException npe) {
             // expected exception thrown
         }
 
         try {
-            // called by System.getProperty()
-            sm.checkPropertyAccess("");
+            new PropertyPermission("", "read");
             throw new Exception("Expected IllegalArgumentException not " +
                                 "thrown");
         } catch (IllegalArgumentException iae) {
