@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,6 @@
  *          jdk.crypto.cryptoki
  * @compile -XDignore.symbol.file TestECDH2.java
  * @run main/othervm TestECDH2
- * @run main/othervm -Djava.security.manager=allow TestECDH2 sm
  */
 
 import java.math.BigInteger;
