@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,8 +31,6 @@
  * @modules jdk.crypto.cryptoki
  * @build jdk.test.lib.RandomFactory
  * @run main/othervm -Djava.security.debug=sunpkcs11 TestKeyPairGenerator
- * @run main/othervm -Djava.security.manager=allow -Djava.security.debug=sunpkcs11 TestKeyPairGenerator
- *                                                   sm TestKeyPairGenerator.policy
  * @key randomness
  */
 
